HLT-3801 fix this as I am hiding affixed on mobile

--- a/src/main/webapp/bundles/health_v4/less/results/resultsHeaderBar.less
+++ b/src/main/webapp/bundles/health_v4/less/results/resultsHeaderBar.less
@@ -95,10 +95,7 @@
     }
   }
 
-/*  &.affixed-compact {
-    h3 {
-      display: block; // for some reason it's hidden in the core.
-    }
+  &.affixed-compact {
     @media (@xs-only) {
       .result {
         .opacity(0);
@@ -116,7 +113,7 @@
 
     }
 
-  }*/
+  }
 
   // only in effect during the pagination animation
   &.affixed-absoluted {
